--- a/README
+++ b/README
@@ -7,3 +7,6 @@ https://nl.wikipedia.org/wiki/Bemoeizorg
 
 # psychiater
 https://nl.wikipedia.org/wiki/Psychiater
+
+# duitse herder
+https://nl.wikipedia.org/wiki/Duitse_herder
