--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# valse-herdershonden bemoeizorg-bewakingdienst
+-------------------------------------------------
+| valse-herdershonden-bemoeizorg-bewakingdienst |
+-------------------------------------------------
 
 2002-2022
 
