--- a/README
+++ b/README
@@ -1,8 +1,9 @@
--------------------------------------------------
-| valse-herdershonden-bemoeizorg-bewakingdienst |
--------------------------------------------------
+-----------------------
+| valse-herdershonden |
+-----------------------
 
-2002-2022
+'bewakingsduenst'
+
 
 # bemoeizorg
 https://nl.wikipedia.org/wiki/Bemoeizorg
@@ -15,3 +16,5 @@ https://nl.wikipedia.org/wiki/Duitse_herder
 
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
+
+nederland ® 2002-2022
